[package]
name = "wp-knowledge"
version = "1.19.2"
edition = "2024"
license = "Apache-2.0"
description = "KnowDB loader and SQLite-backed query facade for the Warp Parse stack."
readme = "README.md"
repository = "https://github.com/wp-labs/wp-knowledge"
homepage = "https://github.com/wp-labs/wp-knowledge"
documentation = "https://docs.rs/wp-knowledge"
keywords = ["knowledge", "sqlite", "csv", "loader", "knowdb"]
categories = ["database", "data-structures"]

[lib]
name = "wp_knowledge"

[dependencies]
# Keep wp-knowledge on the same error stack as wp-error/orion_conf (0.5.x).
orion-error = "0.6"
wp-error = "0.8"
orion-variate = "0.11"
orion_conf = { version = "0.5", features = ["yaml", "toml"] }
wp-log = "0.2"
wp-specs = "0.8"
wp-model-core = "0.8"
wp-data-fmt = "0.2"
log = "0.4"
anyhow = "1.0"
wildmatch = "2.6"
thiserror = "2.0"
ipnet = { version = "2.11", features = ["json"] }
strfmt = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
strum_macros = "0.27"
r2d2 = "0.8"
rusqlite = { version = "0.32.1", features = ["backup", "functions"] }
r2d2_sqlite = "0.25"
enum_dispatch = "0.3"
lazy_static = "1.5"
csv = "1.4"
derive-getters = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
once_cell = "1.21"
toml = "1.0"
lru = "0.16"

[dev-dependencies]
criterion = "0.8"
rand_distr = "0.6"

[[bench]]
name = "read_bench"
harness = false
