[package]
name = "wp-knowledge"
version = "0.11.6" # @gxl:set(version)
edition = "2024"
license = "Apache-2.0"
description = "KnowDB loader and SQLite-backed query facade for the Warp Parse stack."
readme = "README.md"
repository = "https://github.com/wp-labs/wp-knowledge"
homepage = "https://github.com/wp-labs/wp-knowledge"
documentation = "https://docs.rs/wp-knowledge"
keywords = ["knowledge", "sqlite", "csv", "loader", "knowdb"]
categories = ["database", "data-structures"]

[lib]
name = "wp_knowledge"

[dependencies]
# Keep wp-knowledge on the same error stack as wp-error/orion_conf (0.5.x).
orion-error = "0.6"
wp-error = "0.8"
orion-variate = "0.11"
orion_conf = { version = "0.5", features = ["yaml", "toml"] }
wp-log = "0.2"
wp-model-core = "0.8"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
rusqlite = { version = "0.32.1", features = ["backup", "functions"] }
r2d2_sqlite = "0.25"
enum_dispatch = "0.3"
lazy_static = "1.5"
csv = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.17"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "json", "bigdecimal", "uuid", "ipnet"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
criterion = "0.8"
mysql = "28.0.0"
once_cell = "1.21"
rand = "0.10"
toml = "1.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
wp-data-fmt = "0.2"
testcontainers = { version = "0.27", features = ["blocking"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[[bench]]
name = "read_bench"
harness = false
